@@ -18,9 +18,4 @@ require_relative 'scripts/all.rb'
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     init_all(config, settings)
-
-    config.trigger.before :halt do |trigger|
-        trigger.info = "stop docker stack..."
-        trigger.run_remote = {inline: "cd /vagrant/docker/run; docker-compose down"}
-    end
 end
